--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,18 @@
     }
   ],
   "compilerOptions": {
-    "allowJs": true
+    "allowJs": true,
+    "lib": ["es6", "dom", "es2016"],
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "outDir": "./dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "types": [
+      "vite/client",
+    ],
+    "strict": true,
   },
   "include": [
     "src/**/*.ts",
