--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,6 +6,7 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
+    "plugins/**/*",
   ],
   "compilerOptions": {
     "composite": true,
