--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "loadash": "^1.0.0",
     "pinia": "^2.1.7",
     "uninstall": "^0.0.0",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
