--- a/src/widgets/Free-Chat-Widget/tsconfig.json
+++ b/src/widgets/Free-Chat-Widget/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": [
     "./**/*.ts",
-    "../types.d.ts"
+    "../../se-types.d.ts"
   ],
   "compilerOptions": {
     "composite": true,
