upgraded config files

--- a/src/widgets/Free-Chat-Widget/tsconfig.json
+++ b/src/widgets/Free-Chat-Widget/tsconfig.json
@@ -6,7 +6,10 @@
   "compilerOptions": {
     "composite": true,
     "allowJs": true,
+    "target": "ES2024",
     "esModuleInterop": true,
+    "moduleResolution": "node16",
+    "module": "Node16",
     "resolveJsonModule": true,
     "strict": true
   }
