--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 
 node_modules
 /src/widgets/*
+/src/private_utils/*
 !/src/widgets/Free-Chat-Widget
 /src/widget-registry.ts
 .DS_Store
