--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "allowJs": true,
     "target": "ES2022",
     "esModuleInterop": true,
-    "moduleResolution": "node16",
-    "module": "Node16",
+    "moduleResolution": "bundler",
+    "module": "ES2022",
     "resolveJsonModule": true,
     "outDir": "./dist",
     "paths": {
