--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/animejs": "^3.1.13",
     "@types/lodash": "^4.14.200",
+    "@types/matter-js": "^0.19.8",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
