--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "uuid": "^9.0.1",
     "vite-plugin-dts": "^4.5.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -34,6 +35,7 @@
     "@types/jquery": "^3.5.25",
     "@types/node": "^18.18.5",
     "@types/uuid": "^9.0.6",
+    "@types/webfontloader": "^1.6.38",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
