--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/matter-js": "^0.19.8",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
+    "nanoid": "^5.1.6",
     "pinia": "^2.1.7",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
